apps/buggyrace/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: buggyrace
spec:
  selector:
    app: buggyrace
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5173
